tests/toy/neg/001617_mutation.toylang
program a = { while a do program sleep; } .
